@@ -58,6 +58,7 @@ import inspect
 import gc
 import dis
 import pickle
+from warnings import warn as _warn
 try:
     from time import monotonic as _time
 except ImportError:
