@@ -178,6 +178,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #17143: Fix a missing import in the trace module.  Initial patch by
+  Berker Peksag.
+
 - Issue #16743: Fix mmap overflow check on 32 bit Windows.
 
 - Issue #16800: tempfile.gettempdir() no longer left temporary files when
